--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
-command = "streamlit run app.py"
-publish = "C:\Users\DELL\OneDrive\Desktop\ML Final"
+[build]
+  command = "streamlit run app.py"
+  publish = "C:\Users\DELL\OneDrive\Desktop\ML Final"
